log
Thu 05 Oct 2023 01:11:28 AM UTC: 
 tests:  0|5
total_score: 0/70
7aad0a3
Thu 05 Oct 2023 01:29:42 AM UTC: 
 sudoku.c | 25 +++++++++++--------------
 1 file changed, 11 insertions(+), 14 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:61:22: error: expected ‘;’ before ‘}’ token
   61 |     nodo = top(stack)
      |                      ^
      |                      ;
   62 |   }
      |   ~                   
sudoku.c:60:11: error: variable ‘nodo’ set but not used [-Werror=unused-but-set-variable]
   60 |     Node *nodo;
      |           ^~~~
sudoku.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cc4378d
Thu 05 Oct 2023 01:30:23 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:60:11: error: variable ‘nodo’ set but not used [-Werror=unused-but-set-variable]
   60 |     Node *nodo;
      |           ^~~~
sudoku.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
96a3f53
Thu 05 Oct 2023 01:31:27 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:64:18: error: expected expression before ‘Node’
   64 |     if (is_final(Node) == 10) {
      |                  ^~~~
sudoku.c:67:18: error: expected expression before ‘Node’
   67 |     if (is_final(Node) == 1) {
      |                  ^~~~
sudoku.c:71:1: error: control reaches end of non-void function [-Werror=return-type]
   71 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ac4b18a
Thu 05 Oct 2023 01:33:58 AM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:64:18: error: expected expression before ‘Node’
   64 |     if (is_final(Node) == 10) {
      |                  ^~~~
sudoku.c:67:18: error: expected expression before ‘Node’
   67 |     if (is_final(Node) == 1) {
      |                  ^~~~
sudoku.c:71:31: error: expected expression before ‘Node’
   71 |     List *adj = get_adj_nodes(Node);
      |                               ^~~~
Compilation failed
5f8b288
Thu 05 Oct 2023 01:43:16 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
ca1ea34
Thu 05 Oct 2023 01:45:15 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
db6f976
Thu 05 Oct 2023 02:02:49 AM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
a9e2042
